@@ -10,6 +10,8 @@ import org.openxava.model.*
 @View(members="""
     descripcionDiaTrabajo, descripcion;
     titDatDia { detalle1 }
+    titCalFab { detalle12 }
+    titConSerInsFab { detalle13 }
 """)
 class BlcAdmin extends Formulario {
     
@@ -23,7 +25,17 @@ class BlcAdmin extends Formulario {
 
     @OneToMany (mappedBy="blc", cascade=CascadeType.ALL)
     @CollectionView("Simple")
+    @ListProperties("orden,material.descripcion,valor,unidad.descripcion")
     @XOrderBy("orden") @EditOnly
     Collection<BlcDetalle1>detalle1
     
+    @CollectionView("Simple")
+    @ListProperties("orden,indicador.descripcion;unidades,unidad.descripcion")
+    @OneToMany (mappedBy="blc", cascade=CascadeType.ALL) @XOrderBy("orden") @EditOnly
+    Collection<BlcDetalle12> detalle12
+
+    @CollectionView("Simple")
+    @ListProperties("orden,indicador.descripcion;unidades,unidad.descripcion")
+    @OneToMany (mappedBy="blc", cascade=CascadeType.ALL) @XOrderBy("orden") @EditOnly
+    Collection<BlcDetalle13> detalle13
 }
