@@ -1,4 +1,8 @@
 2010-10-11
+	Crear BlcAdmin para ingresar datos acumulados iniciales
+	Crear valores del día anterior en tabla detalle1
+	Crear valores del día anterior en tabla detalle12
+	Crear valores del día anterior en tabla detalle13
 	BLC: Agregrar items de detalle12 y detalle13
 
 2020-10-04
